<resources>
    <string name="app_name">quizgame</string>
    <string name="textview1">TextView</string>
    <string name="todo1">TODO</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="todo">TODO</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="todo2">TODO</string>
</resources>