<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">

    <ImageView
        android:id="@+id/image_qa"
        android:layout_width="378dp"
        android:layout_height="247dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameshow"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/c1"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:text="@string/button1"
        app:layout_constraintBottom_toTopOf="@+id/c2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_qa"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/c3"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toTopOf="@+id/c4"
        app:layout_constraintEnd_toEndOf="@+id/c2"
        app:layout_constraintStart_toStartOf="@+id/c2"
        app:layout_constraintTop_toBottomOf="@+id/c2" />

    <Button
        android:id="@+id/c4"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/c3"
        app:layout_constraintStart_toStartOf="@+id/c3"
        app:layout_constraintTop_toBottomOf="@+id/c3" />

    <Button
        android:id="@+id/c2"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/button2"
        app:layout_constraintBottom_toTopOf="@+id/c3"
        app:layout_constraintEnd_toEndOf="@+id/c1"
        app:layout_constraintStart_toStartOf="@+id/c1"
        app:layout_constraintTop_toBottomOf="@+id/c1" />

    <TextView
        android:id="@+id/nameshow"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="#EB42F8"
        android:gravity="center|center_horizontal"
        android:text="@string/textview3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>